[Client] Panel overflow fix

--- a/client/src/views/style/main.scss
+++ b/client/src/views/style/main.scss
@@ -91,3 +91,7 @@ body {
 .rbacRoleIcon {
   color: #7D91A7;
 }
+
+.panel {
+    overflow: auto;
+}
